--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
-    font-family: "Roboto", "Raleway", sans-serif;
-    color: #2e2f42;
-    background-color: FFFFFF;
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #FFFFFF;
     letter-spacing: 0.02em;
     line-height: 1.5;
 }
@@ -12,40 +12,42 @@ ul {
 
 a {
     text-decoration: none;
-    font-style: normal;
 }
 
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #2e2f42;
-}
-
-span {
     color: #4d5ae5;
 }
 
-.navigation a {
+span {
+    color: #2e2f42;;
+}
+
+.link {
     font-weight: 500;
     color: #2e2f42;
 }
-.navigation a:hover {
+.link:hover,
+.link:focus {
     color: #404bbf;
 }
-.navigation a:active {
+.link:active {
     color: #404bbf;
     text-decoration: underline;
 }
-.address-info a {
+.link-address {
     font-weight: 400;
     line-height: 1.5;
     color: #434455;
+    font-style: normal;
 }
-.address-info a:hover {
+.link-address a:hover,
+.link-address a:focus {
     color: #404bbf;
 }
 .banner {
@@ -54,32 +56,44 @@ span {
 h1{
     font-family: "Roboto", sans-serif;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     text-align: center;
     color: #fff;
+    letter-spacing: 0.02em;
 }
 .order-button {
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
+    cursor: pointer;
 }
-.order-button:hover {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: #4d5ae5;
+.order-button:hover,
+.order-button:focus  {
+background-color: #404bbf;
 }
-h3 {
+.name-item {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     color: #2e2f42;
+    letter-spacing: 0.02em;
 }
-p {
-    color: #434455;  
+.role {
+    color: #434455;
+    font-size: 16px;
 }
+.porfolio {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    text-align: center;
+    color: #2e2f42;
 
+}
 .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -92,17 +106,24 @@ p {
 .team-info {
     background: #f4f4fd;
 }
+.item-card {
+    background-color: #FFFFFF;
+}
 .page-footer {
     background: #2e2f42;    
 }
 
 .logo-footer {
+    font-weight: 700;
     font-family: "Raleway", sans-serif;
-    color: #f4f4fd;
+    color: #4d5ae5;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+}
+.logo-style {
+    color: #f4f4fd;
 }
 .text-footer {
     color: #f4f4fd;
