--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ span {
 .link-address:focus {
     color: #404bbf;
 }
-address {
+.addres-info {
     font-style: normal;
 }
 .banner {
@@ -99,10 +99,8 @@ background-color: #404bbf;
 .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
-    height: 1px;
     overflow: hidden;
     white-space: nowrap;
-    width: 1px;
   }
 .team-title{
     font-size: 36px;
